# tanchishe

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SUBMISSION.md  TASKS.md  build.bat
docs/: 热门贪吃蛇游戏差异分析与优化说明.md  贪吃蛇项目五人详细工作步骤安排.docx
frontend/: app.js  index.html  styles.css
member_code/: README.md
member_code/member1_main_game/: README.md  game.c  game.h  main.c
member_code/member2_snake/: README.md  snake.h
member_code/member3_food/: README.md  food.c  food.h
member_code/member4_ui_visual/: README.md  ui.c  ui.h
member_code/member5_controls_build_docs/: CMakeLists.txt  PROJECT_CONTRIBUTING.md  PROJECT_README.md  PROJECT_TASKS.md  README.md  TASKS.md  build.bat  controls.c  controls.h
src/: collision.c  collision.h  config.h  controls.c  food.c  food.h  game.c  game.h  main.c  snake.c  snake.h  types.h  ui.c  ui.h
tools/: generate_tutorial_pdf.py  generate_work_plan_docx.py
